--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ gensound = "^0.5.3"
 
 [tool.poetry.dev-dependencies]
 coverage = "^6.3.2"
+pylint = "^2.13.5"
+autopep8 = "^1.6.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
