--- a/.coveragerc
+++ b/.coveragerc
@@ -1,3 +1,3 @@
 [run]
 source = src
-omit = src/**/__init__.py,src/tests/**,src/visuals.py,src/ui.py
+omit = src/**/__init__.py,src/tests/**,src/visuals.py,src/ui.py,src/controls.py
